Fix one drawer not collapsing

--- a/web/src/components/pages/contribution/sentence-collector/write/sentence-input-and-rules/rules.css
+++ b/web/src/components/pages/contribution/sentence-collector/write/sentence-input-and-rules/rules.css
@@ -145,6 +145,10 @@
       font-size: var(--font-size-xs);
     }
   }
+
+  ul.list-is-hidden {
+    display: none;
+  }
 }
 
 .rules.collapsible {
@@ -164,10 +168,6 @@
         padding-bottom: 24px;
       }
     }
-  }
-
-  & ul.list-is-hidden {
-    display: none;
   }
 }
 
